--- a/index.html
+++ b/index.html
@@ -247,6 +247,29 @@
         #music-playlist p {
             word-break: break-all; /* Prevents overflow */
         }
+
+        /* Style untuk tombol copy */
+        .copy-button {
+            background-color: #3498db;
+            color: #fff;
+            border: none;
+            padding: 5px 10px;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 0.8em;
+            margin-left: 5px;
+            transition: background-color 0.3s ease;
+        }
+
+        .copy-button:hover {
+            background-color: #2980b9;
+        }
+
+        .api-endpoint-item {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
     </style>
 </head>
 
@@ -282,6 +305,18 @@
         </div>
     </div>
 
+    <div class="row">
+        <div class="col-md-12">
+            <div class="container">
+                <h2 class="container-title">MY TELEGRAM
+                    <button class="copy-button" data-clipboard-text="https://wanzofc.xyz">
+                        <i class="fas fa-copy"></i> 
+                    </button>
+                </h2>
+                <p><code>https://t.me/wanzofc</code></p>
+            </div>
+        </div>
+    </div>
 
 </main>
 
@@ -298,9 +333,14 @@
 
                 <ul id="api-endpoints-list">
                     <li>
-                        <a href="#" data-endpoint="/api/stalk/github">
-                            <i class="fab fa-github"></i> Get GitHub User
-                        </a>
+                        <div class="api-endpoint-item">
+                            <a href="#" data-endpoint="/api/stalk/github">
+                                <i class="fab fa-code"></i> Get GitHub User
+                            </a>
+                            <button class="copy-button copy-github" data-endpoint="/api/stalk/github">
+                                <i class="fas fa-copy"></i> 
+                            </button>
+                        </div>
                         <div class="api-input-group">
                             <input type="text" class="github-user" placeholder="Username">
                         </div>
@@ -309,9 +349,14 @@
                         </button>
                     </li>
                     <li>
-                        <a href="#" data-endpoint="/api/d/tiktok">
-                            <i class="fab fa-tiktok"></i> TikTok Downloader
-                        </a>
+                        <div class="api-endpoint-item">
+                            <a href="#" data-endpoint="/api/d/tiktok">
+                                <i class="fab fa-code"></i> TikTok Downloader
+                            </a>
+                            <button class="copy-button copy-tiktok" data-endpoint="/api/d/tiktok">
+                                <i class="fas fa-copy"></i> 
+                            </button>
+                        </div>
                         <div class="api-input-group">
                             <input type="text" class="tiktok-url" placeholder="TikTok URL">
                         </div>
@@ -320,9 +365,14 @@
                         </button>
                     </li>
                     <li>
-                        <a href="#" data-endpoint="/api/stalk/youtube">
-                            <i class="fab fa-youtube"></i> Stalk YouTube
-                        </a>
+                        <div class="api-endpoint-item">
+                            <a href="#" data-endpoint="/api/stalk/youtube">
+                                <i class="fab fa-code"></i> Stalk YouTube
+                            </a>
+                            <button class="copy-button copy-youtube" data-endpoint="/api/stalk/youtube">
+                                <i class="fas fa-copy"></i> 
+                            </button>
+                        </div>
                         <div class="api-input-group">
                             <input type="text" class="youtube-username" placeholder="Username">
                         </div>
@@ -352,11 +402,11 @@
 </footer>
 
 <div id="music-playlist">
-  <audio id="audio" autoplay loop>
-    <source src="https://files.catbox.moe/4m9c5h.mp3" type="audio/mp3">
-    <source src="https://files.catbox.moe/irf66d.mp3" type="audio/mp3">
-    Your browser does not support the audio element.
-  </audio>
+    <audio id="audio" autoplay loop>
+        <source src="https://files.catbox.moe/4m9c5h.mp3" type="audio/mp3">
+        <source src="https://files.catbox.moe/irf66d.mp3" type="audio/mp3">
+        Your browser does not support the audio element.
+    </audio>
 </div>
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -364,6 +414,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
 <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/clipboard@1/dist/clipboard.min.js"></script>
 
 <script>
     $(document).ready(function () {
@@ -378,6 +429,9 @@
         const apiEndpointsList = $('#api-endpoints-list');
         const audio = document.getElementById('audio');
         let batteryLevels = [];
+
+        // Initialize ClipboardJS
+        const clipboard = new Clipboard('.copy-button');
 
         // Data endpoints (Ganti dengan data API endpoint yang sebenarnya)
         const endpointsData = [
@@ -555,9 +609,45 @@
             }
         });
 
+        // Fungsi untuk menyalin endpoint dengan parameter
+        $('.copy-button').on('click', function (e) {
+            e.preventDefault();
+            const endpoint = $(this).data('endpoint');
+            let fullUrl = 'https://wanzofc.xyz' + endpoint + '?';
+            let params = [];
+
+            const listItem = $(this).closest('li');
+
+            if (endpoint === '/api/stalk/github') {
+                let username = listItem.find('.github-user').val();
+                if (username) {
+                    params.push(`user=${username}`);
+                }
+            } else if (endpoint === '/api/d/tiktok') {
+                let tiktokUrl = listItem.find('.tiktok-url').val();
+                if (tiktokUrl) {
+                    params.push(`url=${tiktokUrl}`);
+                }
+            } else if (endpoint === '/api/stalk/youtube') {
+                let youtubeUsername = listItem.find('.youtube-username').val();
+                if (youtubeUsername) {
+                    params.push(`username=${youtubeUsername}`);
+                }
+            }
+
+            fullUrl += params.join('&');
+
+            // Salin ke clipboard
+            navigator.clipboard.writeText(fullUrl).then(() => {
+                alert('Endpoint berhasil disalin: ' + fullUrl);
+            }, (err) => {
+                console.error('Gagal menyalin endpoint: ', err);
+            });
+        });
+
         //Mulai Otomatis
         audio.play().catch(error => {
-          console.error("Autoplay dicegah:", error);
+            console.error("Autoplay dicegah:", error);
         });
 
     });
